2004-07-15 Oyvind Harboe <oyvind.harboe@zylin.com>	
	
	*cdl/freebsd_net.cdl:
	*src/ecos/support.c: made memory pools default to current size, 
	but separately controllable from the cdl file. This is useful for 
	systems with tight memory budgets.
	
2004-06-01  Sandeep Kumar  <sandeep@codito.com>

	* tests/sysctl1.c: Call CYG_TEST_EXIT at the end of the test.

2004-05-25  Gary Thomas  <gary@mlbassoc.com>

	* src/sys/netinet/if_ether.c: Clean up some log messages - remove
	extraneous ":" which caused incorrect printouts.

2004-04-30  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/ecos/timeout.c (callout_reset): Clarify assert message on
	expiry date from ages ago and also add comment explaining further.

2004-03-30  Horst Kronstorfer  <horst.kronstorfer@frequentis.com>
 
        * src/sys/kern/uipc_mbuf.c
        * src/ecos/support.c
        * include/sys/mbuf.h: Avoid blocking alloc from (empty) mbuf pool.
        Freed mbufs are never returned to the pool, but to the mbuf
        "free list". This can cause a deadlock situation.
        Duplicated incrementing of mbuf statistics removed.
 
2004-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ecos/support.c (_dumpentry): Don't skip routes which don't
	have a netmask. These are seem to be valid host routes.

2004-02-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/freebsd.sgml: Import text from openbsd doc about use of __ECOS
	<network.h>, etc.

2004-01-17  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sys/kern/sockio.c (bsd_connect): Set the sa_len field in
	the sockaddr structure. Real FreeBSD does this.

2003-12-21  Nick Garnett  <nickg@calivar.com>

	* include/sys/param.h: Restored MD5 function mappings. These were
	accidentally removed earlier.

2003-12-16  Gary Thomas  <gary@mlbassoc.com>

	* cdl/freebsd_net.cdl: Increase default memory pool size to
	include at least enough space to allocate PCBs and SOCKETs.
	Without this, if the number of open files was raised, the
	memory pool was inadequate.
